syntax = "proto3";

option java_multiple_files = true;
//option java_package = "io.tokikokoko.hellogrpc.server";
//option java_outer_classname = "HelloGrpc";
option go_package = "HelloGrpc";

package HelloGrpc;

// The greeting service definition.
service HelloGrpc {
    // Sends a greeting
    rpc GreetServer (GreetRequest) returns (GreetMessage) {}
    // チャットルーム追加
    rpc AddRoom (RoomRequest) returns (RoomInfo) {}
    // チャットルーム情報取得
    rpc GetRoomInfo (RoomRequest) returns (RoomInfo) {}
    // チャットルーム一覧取得
    rpc GetRooms (Null) returns (RoomList) {}
    // Client-side streamingを用いてメッセージを交換する
    rpc SendMessage (stream SendRequest) returns (SendResult) {}
    // Server-side streamingを用いてメッセージを交換する
    rpc GetMessages (MessagesRequest) returns (stream Message) {}
}

// 空のmessage
message Null {
}

message GreetRequest {
    string name = 1;
}

message GreetMessage {
    string msg = 1;
}

message RoomRequest {
    string id = 1;
}

message RoomInfo {
    string id = 1;
    int32 messageCount = 2;
}

message RoomList {
    repeated RoomInfo rooms = 1;
}

message SendRequest {
    string id = 1;
    string name = 2;
    string content = 3;
}

message SendResult {
    bool result = 1;
}

message MessagesRequest {
    string id = 1;
}

message Message {
    string id = 1;
    string name = 2;
    string content = 3;
}